--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,25 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="description"
+    content="Frontend developer proficient in HTML5, CSS3, JavaScript, React, and Firebase. Expanding skills with Next.js, Node.js, Express.js, MongoDB. Strong programming fundamentals in C++ and Python.">
+  <meta name="keywords" content="Huzaifa Khan, huzaifa khan portfolio, react portfolio">
+  <meta name="author" content="Huzaifa Khan">
+
+  <meta property="og:title" content="Huzaifa Khan Portfolio">
+  <meta name="og:description"
+    content="Frontend developer proficient in HTML5, CSS3, JavaScript, React, and Firebase. Expanding skills with Next.js, Node.js, Express.js, MongoDB. Strong programming fundamentals in C++ and Python.">
+  <meta property="og:type" content="website">
+  <meta property="og:image"
+    content="https://media.licdn.com/dms/image/D4D03AQFO0bXV5YbEiQ/profile-displayphoto-shrink_800_800/0/1709972515921?e=1715817600&v=beta&t=FiTnk_6pr-1M5d0dKTMuLqPKeDnNocfCgWt3UtFTqDE">
+  <!-- <meta property="og:url" content="https://www.yourportfoliosite.com"> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <title>Huzaifa Khan | Portfolio</title>
 </head>
 
 <body>
   <div id="root"></div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
